--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules/
-web/node_modules/
-web/dist/
-data/
+resource/node_modules/
+resource/web/node_modules/
+resource/web/dist/
+desktop/node_modules/
+desktop/dist/
+desktop/release/
+resource/data/
 .env
 .claude/
