--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "fivem-cad",
+  "name": "cad-monorepo",
   "version": "0.2.0",
   "private": true,
-  "main": "server/index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "web:dev": "npm --prefix web run dev",
-    "web:build": "npm --prefix web run build"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0",
-    "sql.js": "^1.11.0"
+    "start": "npm run resource:start",
+    "web:dev": "npm run resource:web:dev",
+    "web:build": "npm run resource:web:build",
+    "resource:start": "npm --prefix resource run start",
+    "resource:web:dev": "npm --prefix resource run web:dev",
+    "resource:web:build": "npm --prefix resource run web:build",
+    "desktop:dev": "npm --prefix desktop run dev",
+    "desktop:build": "npm --prefix desktop run build"
   }
 }
