Added start script for easy use and github auto updates

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,16 @@ DISCORD_BOT_TOKEN=your-discord-bot-token
 DISCORD_GUILD_ID=your-guild-id
 DISCORD_CLIENT_ID=your-discord-client-id
 DISCORD_CLIENT_SECRET=your-discord-client-secret
+DISCORD_PERIODIC_SYNC_MINUTES=10
+
+# Auto Update (VPS)
+AUTO_UPDATE_ENABLED=false
+AUTO_UPDATE_INTERVAL_MINUTES=5
+AUTO_UPDATE_BRANCH=main
+AUTO_UPDATE_RUN_NPM_INSTALL=true
+AUTO_UPDATE_RUN_WEB_BUILD=true
+AUTO_UPDATE_EXIT_ON_UPDATE=true
+AUTO_UPDATE_SELF_RESTART=true
 
 # QBox MySQL (optional - can be configured via admin panel)
 QBOX_DB_HOST=127.0.0.1
@@ -23,3 +33,7 @@ QBOX_DB_NAME=qbox
 
 # Frontend URL (for CORS and redirects)
 WEB_URL=http://localhost:5173
+
+# QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
+# QBOX_PERSON_CUSTOM_FIELDS=[{"key":"job","source":"charinfo","path":"job.label"}]
+# QBOX_VEHICLE_CUSTOM_FIELDS=[{"key":"mods_class","source":"column","column":"mods","path":"class"}]
