Fixed auto update and excuded claude

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ DISCORD_PERIODIC_SYNC_MINUTES=10
 AUTO_UPDATE_ENABLED=false
 AUTO_UPDATE_INTERVAL_MINUTES=5
 AUTO_UPDATE_BRANCH=main
+# Optional on Windows VPS if git is not in PATH:
+# GIT_BIN=C:\Program Files\Git\cmd\git.exe
 AUTO_UPDATE_RUN_NPM_INSTALL=true
 AUTO_UPDATE_RUN_WEB_BUILD=true
 AUTO_UPDATE_EXIT_ON_UPDATE=true
@@ -32,7 +34,8 @@ QBOX_DB_PASSWORD=
 QBOX_DB_NAME=qbox
 
 # Frontend URL (for CORS and redirects)
-WEB_URL=http://localhost:5173
+# In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
+WEB_URL=http://localhost:3030
 
 # QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
 # QBOX_PERSON_CUSTOM_FIELDS=[{"key":"job","source":"charinfo","path":"job.label"}]
