--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ AUTO_UPDATE_INTERVAL_MINUTES=5
 AUTO_UPDATE_BRANCH=main
 # Optional on Windows VPS if git is not in PATH:
 # GIT_BIN=C:\Program Files\Git\cmd\git.exe
+# Optional on Windows VPS if npm is not in PATH:
+# NPM_BIN=C:\Program Files\nodejs\npm.cmd
 AUTO_UPDATE_RUN_NPM_INSTALL=true
 AUTO_UPDATE_RUN_WEB_BUILD=true
 AUTO_UPDATE_EXIT_ON_UPDATE=true
