--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
+    "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
-    "passport-steam": "^1.0.18"
+    "passport-steam": "^1.0.18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
