Added security, fixed hearer and side bar and moved admin to own page

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ STEAM_API_KEY=your-steam-api-key
 STEAM_REALM=http://localhost:3030
 STEAM_RETURN_URL=http://localhost:3030/api/auth/steam/callback
 
+# Auth cookie
+AUTH_COOKIE_NAME=cad_token
+AUTH_COOKIE_SAMESITE=Lax
+# Set true only when using HTTPS
+AUTH_COOKIE_SECURE=false
+# Optional cookie domain (blank = current host)
+AUTH_COOKIE_DOMAIN=
+
 # Discord Bot
 DISCORD_BOT_TOKEN=your-discord-bot-token
 DISCORD_GUILD_ID=your-guild-id
