Fixed updater (again)

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@ DISCORD_PERIODIC_SYNC_MINUTES=10
 AUTO_UPDATE_ENABLED=false
 AUTO_UPDATE_INTERVAL_MINUTES=5
 AUTO_UPDATE_BRANCH=main
+# Force updater to discard local repo changes before checking/applying updates.
+AUTO_UPDATE_FORCE_SYNC=true
+# Comma-separated paths to preserve when cleaning untracked files.
+# Keep .env and server data by default.
+AUTO_UPDATE_PRESERVE_PATHS=.env,server/data/
 # Optional on Windows VPS if git is not in PATH:
 # GIT_BIN=C:\Program Files\Git\cmd\git.exe
 # Optional on Windows VPS if npm is not in PATH:
