Inital resource setup for in game intergration

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,9 @@ AUTO_UPDATE_RUN_WEB_BUILD=true
 AUTO_UPDATE_EXIT_ON_UPDATE=true
 AUTO_UPDATE_SELF_RESTART=true
 
+# Optional fallback for FiveM bridge auth token (Admin setting overrides this)
+# FIVEM_BRIDGE_SHARED_TOKEN=change-me-long-random-token
+
 # QBox MySQL (optional - can be configured via admin panel)
 QBOX_DB_HOST=127.0.0.1
 QBOX_DB_PORT=3306
