Changed to use livemap resource

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,11 @@ QBOX_DB_NAME=qbox
 # In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
 WEB_URL=http://localhost:3030
 
+# Optional: override live_map websocket URL used by CAD Live Map page.
+# If unset, CAD will try ws(s)://<cad-host>:30121
+# VITE_LIVEMAP_SOCKET_URL=ws://127.0.0.1:30121
+# VITE_LIVEMAP_SOCKET_PORT=30121
+
 # QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
 # QBOX_PERSON_CUSTOM_FIELDS=[{"key":"job","source":"charinfo","path":"job.label"}]
 # QBOX_VEHICLE_CUSTOM_FIELDS=[{"key":"mods_class","source":"column","column":"mods","path":"class"}]
