Inital live map change

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,8 @@ WEB_URL=http://localhost:3030
 # If unset, CAD will try ws(s)://<cad-host>:30121
 # VITE_LIVEMAP_SOCKET_URL=ws://127.0.0.1:30121
 # VITE_LIVEMAP_SOCKET_PORT=30121
+# Optional: direct URL to embed/open live_map web UI (overrides socket-derived URL)
+# VITE_LIVEMAP_DIRECT_URL=http://127.0.0.1:30121
 
 # QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
 # QBOX_PERSON_CUSTOM_FIELDS=[{"key":"job","source":"charinfo","path":"job.label"}]
