--- a/.env.example
+++ b/.env.example
@@ -55,12 +55,7 @@ QBOX_DB_NAME=qbox
 # In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
 WEB_URL=http://localhost:3030
 
-# Optional: override live_map websocket URL used by CAD Live Map page.
-# If unset, CAD will try ws(s)://<cad-host>:30121
-# VITE_LIVEMAP_SOCKET_URL=ws://127.0.0.1:30121
-# VITE_LIVEMAP_SOCKET_PORT=30121
-# Optional: direct URL to embed/open live_map web UI (overrides socket-derived URL)
-# VITE_LIVEMAP_DIRECT_URL=http://127.0.0.1:30121
+# Live map now uses cad_bridge heartbeat data directly inside CAD (Snaily-style mapping).
 
 # QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
 # QBOX_PERSON_CUSTOM_FIELDS=[{"key":"job","source":"charinfo","path":"job.label"}]
