Fixed rate limiting

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,20 @@ QBOX_DB_NAME=qbox
 # In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
 WEB_URL=http://localhost:3030
 
+# HTTP / reverse-proxy handling:
+# - false: direct connection (no proxy)
+# - true/1: trust first proxy hop
+# - N: trust N proxy hops
+TRUST_PROXY=false
+
+# API rate limiting
+# Set *_MAX to 0 to disable that limiter.
+API_RATE_LIMIT_WINDOW_MS=900000
+API_RATE_LIMIT_MAX=500
+API_RATE_LIMIT_SKIP_AUTHENTICATED=true
+FIVEM_RATE_LIMIT_WINDOW_MS=900000
+FIVEM_RATE_LIMIT_MAX=120000
+
 # Live map now uses cad_bridge heartbeat data directly inside CAD (Snaily-style mapping).
 
 # QBox custom field mappings (optional JSON arrays; can also be set in Admin > System Settings)
