Added initial call and radio test to CAD (fingers crossed)

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,16 @@ QBOX_DB_NAME=qbox
 # In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
 WEB_URL=http://localhost:3030
 
+# Mumble voice bridge (dispatcher web voice)
+MUMBLE_HOST=127.0.0.1
+MUMBLE_PORT=64738
+MUMBLE_PASSWORD=
+# Optional comma-separated ACL tokens
+MUMBLE_TOKENS=
+MUMBLE_REJECT_UNAUTHORIZED=false
+MUMBLE_DISABLE_UDP=false
+MUMBLE_DISPATCHER_NAME_PREFIX=CAD_Dispatcher
+
 # HTTP / reverse-proxy handling:
 # - false: direct connection (no proxy)
 # - true/1: trust first proxy hop
