--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "src/index.js",
   "scripts": {
+    "postinstall": "node scripts/fix-mumble-node.js",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -17,11 +18,14 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mumble-node": "^0.1.0",
     "mysql2": "^3.12.0",
     "multer": "^1.4.5-lts.2",
+    "opusscript": "^0.0.8",
     "passport": "^0.7.0",
     "passport-steam": "^1.0.18",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "ws": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
