--- a/voice.cfg
+++ b/voice.cfg
@@ -18,8 +18,11 @@ setr voice_hideEndpoints 1
 # Without this, pma-voice server.lua auto-sets voice_useNativeAudio=true and
 # voice_useSendingRangeOnly=true which changes proximity ranges and can break voice.
 # voice_use2dAudio=true: standard GTA 2D proximity (recommended for external Mumble).
+#
+# DO NOT set voice_useSendingRangeOnly=true with an external Mumble server.
+# FiveM does not forward player position data to external Murmur, so the sending
+# range check always fails and silently blocks ALL audio transmission.
 setr voice_use2dAudio true
-setr voice_useSendingRangeOnly true
 
 # =============================================================================
 # CAD Bridge settings
