--- a/voice.cfg
+++ b/voice.cfg
@@ -39,3 +39,10 @@ set cad_bridge_npwd_resource "npwd"
 # Fine + job sync
 set cad_bridge_fine_adapter "auto"
 set cad_bridge_job_sync_adapter "auto"
+
+# Radio adapter for CAD-driven radio channel events
+# 'auto'      -> try pma-voice first, fall back to mm-radio (recommended)
+# 'pma-voice' -> use pma-voice exports (setPlayerRadio / setPlayerCall)
+# 'mm-radio'  -> use mm_radio exports (JoinRadio / LeaveRadio)
+# 'none'      -> disable in-game radio sync
+set cad_bridge_radio_adapter "auto"
