--- a/voice.cfg
+++ b/voice.cfg
@@ -19,11 +19,12 @@ setr voice_externalPort 64738
 setr voice_allowSetIntent 1
 setr voice_hideEndpoints 1
 
-# Audio mode — voice_use2dAudio prevents pma-voice auto-overriding to
-# voice_useNativeAudio. With rust-mumble (the CAD's built-in voice server),
-# proximity voice targets work correctly regardless of audio mode setting.
-# voice_use2dAudio gives flat-volume proximity (recommended for roleplay).
-setr voice_use2dAudio true
+# Audio mode — voice_useNativeAudio enables the game's native 3D audio engine,
+# which is REQUIRED for the radio submix effect (the walkie-talkie filter on
+# radio transmissions). voice_enableSubmix adds that filter automatically.
+# Note: do NOT enable voice_use2dAudio alongside voice_useNativeAudio.
+setr voice_useNativeAudio true
+setr voice_enableSubmix 1
 
 # =============================================================================
 # CAD Bridge settings
