Hopefully fixed crypt spam

--- a/.env.example
+++ b/.env.example
@@ -68,7 +68,9 @@ MUMBLE_PASSWORD=
 # Optional comma-separated ACL tokens
 MUMBLE_TOKENS=
 MUMBLE_REJECT_UNAUTHORIZED=false
-MUMBLE_DISABLE_UDP=false
+# Keep true unless you have confirmed stable direct UDP between CAD and Murmur.
+# TCP tunnel mode is more reliable for dispatcher bridge sessions.
+MUMBLE_DISABLE_UDP=true
 MUMBLE_DISPATCHER_NAME_PREFIX=CAD_Dispatcher
 
 # FiveM server path (optional — for auto-deploying voice.cfg)
