Mass codex review

--- a/.env.example
+++ b/.env.example
@@ -68,9 +68,10 @@ MUMBLE_PASSWORD=
 # Optional comma-separated ACL tokens
 MUMBLE_TOKENS=
 MUMBLE_REJECT_UNAUTHORIZED=false
-# Keep true unless you have confirmed stable direct UDP between CAD and Murmur.
-# TCP tunnel mode is more reliable for dispatcher bridge sessions.
-MUMBLE_DISABLE_UDP=true
+# Default false so dispatcher bridge can use normal UDP CryptSetup flow.
+# Set true only as a fallback if CAD connects to a non-local Mumble host.
+# (localhost/127.0.0.1 always uses UDP to avoid CryptSetup reset loops)
+MUMBLE_DISABLE_UDP=false
 MUMBLE_DISPATCHER_NAME_PREFIX=CAD_Dispatcher
 
 # FiveM server path (optional — for auto-deploying voice.cfg)
