--- a/voice.cfg
+++ b/voice.cfg
@@ -40,7 +40,7 @@ set cad_bridge_npwd_resource "npwd"
 
 # Fine + job sync
 set cad_bridge_fine_adapter "auto"
-set cad_bridge_job_sync_adapter "auto"
+set cad_bridge_job_sync_adapter "none"
 
 # Radio adapter for CAD-driven radio channel events
 # 'auto'      -> try pma-voice first, fall back to mm-radio (recommended)
