--- a/voice.cfg
+++ b/voice.cfg
@@ -26,6 +26,8 @@ setr voice_hideEndpoints 1
 setr voice_useNativeAudio true
 setr voice_enableSubmix 1
 setr voice_defaultRadioVolume 100
+# CAD bridge handles radio routing/keybinds; keep pma proximity only.
+setr voice_enableRadios 0
 
 # =============================================================================
 # CAD Bridge settings
@@ -43,8 +45,13 @@ set cad_bridge_fine_adapter "auto"
 set cad_bridge_job_sync_adapter "none"
 
 # Radio adapter for CAD-driven radio channel events
-# 'auto'      -> try pma-voice first, fall back to mm-radio (recommended)
+# 'cad-radio' -> CAD custom radio (recommended)
+# 'auto'      -> try pma-voice first, fall back to mm-radio
 # 'pma-voice' -> use pma-voice exports (setPlayerRadio / setPlayerCall)
 # 'mm-radio'  -> use mm_radio exports (JoinRadio / LeaveRadio)
 # 'none'      -> disable in-game radio sync
-set cad_bridge_radio_adapter "auto"
+set cad_bridge_radio_adapter "cad-radio"
+set cad_bridge_radio_ui_enabled "true"
+set cad_bridge_radio_ui_key "EQUALS"
+set cad_bridge_radio_ptt_key "LMENU"
+set cad_bridge_radio_max_frequency "500"
