--- a/server/fivem-resource/server.cfg.example
+++ b/server/fivem-resource/server.cfg.example
@@ -58,11 +58,16 @@ set cad_bridge_fine_adapter "auto"
 set cad_bridge_job_sync_adapter "auto"
 
 # Radio adapter for CAD-driven radio channel join/leave events:
-# 'auto'      -> try pma-voice first, fall back to mm-radio (recommended)
+# 'cad-radio' -> CAD custom radio (recommended)
+# 'auto'      -> try pma-voice first, fall back to mm-radio
 # 'pma-voice' -> use pma-voice exports (setPlayerRadio / setPlayerCall)
 # 'mm-radio'  -> use mm_radio exports (JoinRadio / LeaveRadio)
 # 'none'      -> disable in-game radio sync
-set cad_bridge_radio_adapter "auto"
+set cad_bridge_radio_adapter "cad-radio"
+set cad_bridge_radio_ui_enabled "true"
+set cad_bridge_radio_ui_key "EQUALS"
+set cad_bridge_radio_ptt_key "LMENU"
+set cad_bridge_radio_max_frequency "500"
 
 # =============================================================================
 # STEP 4: Ensure the resource starts
