--- a/voice.cfg
+++ b/voice.cfg
@@ -1,5 +1,5 @@
 # =============================================================================
-# Mumble Voice Configuration — pma-voice + CAD Bridge
+# Mumble Voice Configuration — CAD Bridge
 # =============================================================================
 # Loaded by server.cfg via: exec voice.cfg
 #
@@ -13,7 +13,7 @@
 # provider's security group.
 # =============================================================================
 
-# Direct pma-voice players to the standalone Mumble server (managed by CAD)
+# Direct in-game voice clients to the standalone Mumble server (managed by CAD)
 setr voice_externalAddress "103.203.241.35"
 setr voice_externalPort 64738
 setr voice_allowSetIntent 1
@@ -26,7 +26,7 @@ setr voice_hideEndpoints 1
 setr voice_useNativeAudio true
 setr voice_enableSubmix 1
 setr voice_defaultRadioVolume 100
-# CAD bridge handles radio routing/keybinds; keep pma proximity only.
+# CAD bridge handles radio routing/keybinds.
 setr voice_enableRadios 0
 
 # =============================================================================
@@ -45,10 +45,7 @@ set cad_bridge_fine_adapter "auto"
 set cad_bridge_job_sync_adapter "none"
 
 # Radio adapter for CAD-driven radio channel events
-# 'cad-radio' -> CAD custom radio (recommended)
-# 'auto'      -> try pma-voice first, fall back to mm-radio
-# 'pma-voice' -> use pma-voice exports (setPlayerRadio / setPlayerCall)
-# 'mm-radio'  -> use mm_radio exports (JoinRadio / LeaveRadio)
+# 'cad-radio' -> CAD custom radio (recommended/default)
 # 'none'      -> disable in-game radio sync
 set cad_bridge_radio_adapter "cad-radio"
 set cad_bridge_radio_ui_enabled "true"
