--- a/server.cfg
+++ b/server.cfg
@@ -22,8 +22,12 @@ set blip_file "server/blips.json"
 set livemap_access_control "*"
 set livemap_use_nucleus true # Allow livemap to set up a secure reverseProxy using the Nucleus project
 setr bl:framework 'qbx' 
-setr voice_enableRadioAnim 0
 set cad_bridge_base_url "http://127.0.0.1:3031"
+set cad_bridge_radio_adapter "cad-radio"
+set cad_bridge_radio_ui_enabled "true"
+set cad_bridge_radio_ui_key "EQUALS"
+set cad_bridge_radio_ptt_key "LMENU"
+set cad_bridge_radio_max_frequency "500"
 setr ox:notifyPosition center-right
 
 
