Mumble fixed for radio

--- a/voice.cfg
+++ b/voice.cfg
@@ -51,4 +51,5 @@ set cad_bridge_radio_adapter "cad-radio"
 set cad_bridge_radio_ui_enabled "true"
 set cad_bridge_radio_ui_key "EQUALS"
 set cad_bridge_radio_ptt_key "LMENU"
+set cad_bridge_radio_follow_native_ptt "true"
 set cad_bridge_radio_max_frequency "500"
