--- a/server.cfg
+++ b/server.cfg
@@ -27,6 +27,7 @@ set cad_bridge_radio_adapter "cad-radio"
 set cad_bridge_radio_ui_enabled "true"
 set cad_bridge_radio_ui_key "EQUALS"
 set cad_bridge_radio_ptt_key "LMENU"
+set cad_bridge_radio_follow_native_ptt "true"
 set cad_bridge_radio_max_frequency "500"
 setr ox:notifyPosition center-right
 
