--- a/server.cfg
+++ b/server.cfg
@@ -29,6 +29,11 @@ set cad_bridge_radio_ui_key "EQUALS"
 set cad_bridge_radio_ptt_key "LMENU"
 set cad_bridge_radio_follow_native_ptt "true"
 set cad_bridge_radio_max_frequency "500"
+set cad_bridge_mugshot_provider "screenshot-basic"
+set cad_bridge_screenshot_resource "screenshot-basic"
+set cad_bridge_screenshot_encoding "png"
+set cad_bridge_screenshot_quality "1.0"
+set cad_bridge_screenshot_timeout_ms "5000"
 setr ox:notifyPosition center-right
 
 
@@ -103,6 +108,7 @@ ensure [qbx]
 ensure [standalone]
 ensure pma-voice
 ensure bl-bridge
+ensure screenshot-basic
 ensure MugShotBase64
 ensure cad_bridge
 ensure [assets]
