--- a/server/fivem-resource/server.cfg.example
+++ b/server/fivem-resource/server.cfg.example
@@ -78,10 +78,19 @@ set cad_bridge_show_id_target_distance "4.0"
 set cad_bridge_license_default_expiry_days "35"
 set cad_bridge_registration_default_days "35"
 set cad_bridge_document_fee_account "bank"
+# Photo capture provider:
+# screenshot-basic (recommended), mugshotbase64, or auto
+set cad_bridge_mugshot_provider "screenshot-basic"
+set cad_bridge_screenshot_resource "screenshot-basic"
+set cad_bridge_screenshot_encoding "png"
+set cad_bridge_screenshot_quality "1.0"
+set cad_bridge_screenshot_timeout_ms "5000"
+# Legacy fallback resource (optional)
 set cad_bridge_mugshot_resource "MugShotBase64"
 
 # =============================================================================
 # STEP 4: Ensure the resource starts
 # =============================================================================
 
+ensure screenshot-basic
 ensure cad_bridge
