--- a/voice.cfg
+++ b/voice.cfg
@@ -29,27 +29,6 @@ setr voice_defaultRadioVolume 100
 # CAD bridge handles radio routing/keybinds.
 setr voice_enableRadios 0
 
-# =============================================================================
-# CAD Bridge settings
-# =============================================================================
-
-set cad_bridge_base_url "http://127.0.0.1:3031"
-set cad_bridge_token "Ku3xaT6MVe+GgGC9qQu2bMbdqBEPY7cXCyRd3WISCjA="
-
-# NPWD 000 emergency number interception
-set cad_bridge_npwd_emergency_numbers "000"
-set cad_bridge_npwd_resource "npwd"
-
-# Fine + job sync
-set cad_bridge_fine_adapter "auto"
-set cad_bridge_job_sync_adapter "none"
-
-# Radio adapter for CAD-driven radio channel events
-# 'cad-radio' -> CAD custom radio (recommended/default)
-# 'none'      -> disable in-game radio sync
-set cad_bridge_radio_adapter "cad-radio"
-set cad_bridge_radio_ui_enabled "true"
-set cad_bridge_radio_ui_key "EQUALS"
-set cad_bridge_radio_ptt_key "LMENU"
-set cad_bridge_radio_follow_native_ptt "true"
-set cad_bridge_radio_max_frequency "500"
+# CAD bridge resource settings now live in:
+#   resources/[your-path]/cad_bridge/config.cfg
+# The CAD auto-sync patches that file with base URL and shared token.
