Updated ambulance, voice phase 1 and others

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,11 @@ QBOX_DB_NAME=qbox
 # In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
 WEB_URL=http://localhost:3030
 
+# Radio behavior mode:
+# - legacy  = CAD websocket + mumble bridge path (existing/default behavior)
+# - sonoran = disable CAD legacy bridge path; use external in-game radio behavior
+RADIO_BEHAVIOR=legacy
+
 # Mumble voice bridge (dispatcher web voice)
 # MUMBLE_MANAGE=true  -> CAD spawns rust-mumble.exe automatically from server/murmur/
 # MUMBLE_HOST         -> localhost address the CAD bridge uses to talk to rust-mumble
