NGINX, colour changes, UI fixes, License fixes

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,11 @@ QBOX_DB_NAME=qbox
 # Frontend URL (for CORS and redirects)
 # In production this should be your public CAD URL (same base as STEAM_REALM), not :5173.
 WEB_URL=http://localhost:3030
+# Example production values behind nginx + certbot:
+# WEB_URL=https://cad.quokkanetworks.net
+# STEAM_REALM=https://cad.quokkanetworks.net
+# STEAM_RETURN_URL=https://cad.quokkanetworks.net/api/auth/steam/callback
+# AUTH_COOKIE_SECURE=true
 
 # Radio behavior mode:
 # - legacy  = CAD websocket + mumble bridge path (existing/default behavior)
@@ -91,6 +96,8 @@ FIVEM_SERVER_PATH=
 # - true/1: trust first proxy hop
 # - N: trust N proxy hops
 TRUST_PROXY=false
+# For nginx reverse proxy in production use:
+# TRUST_PROXY=1
 
 # API rate limiting
 # Set *_MAX to 0 to disable that limiter.
