--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -24,7 +24,7 @@ cad_bridge_postal_export=getPostal
 cad_bridge_npwd_resource=npwd
 cad_bridge_npwd_emergency_numbers=000
 
-# Force ox_lib notifications to one position (best effort; explicit per-notify positions can still override)
+# Force cad_bridge ox_lib notifications to one position (other resources may still use their own positions)
 cad_bridge_force_ox_notify_position=true
 cad_bridge_ox_notify_position=center-right
 cad_bridge_ox_notify_force_interval_ms=60000
@@ -52,6 +52,7 @@ cad_bridge_license_command=cadlicense
 cad_bridge_registration_command=cadrego
 cad_bridge_show_id_command=showid
 cad_bridge_show_id_target_distance=4.0
+cad_bridge_show_id_nearby_distance=4.0
 cad_bridge_license_default_expiry_days=35
 cad_bridge_registration_default_days=35
 
