Stopped generating voice.cfg and switched back to internal mumble server

--- a/.env.example
+++ b/.env.example
@@ -61,16 +61,16 @@ WEB_URL=http://localhost:3030
 # AUTH_COOKIE_SECURE=true
 
 # Radio behavior mode:
-# - legacy  = CAD websocket + mumble bridge path (existing/default behavior)
-# - sonoran = disable CAD legacy bridge path; use external in-game radio behavior
-RADIO_BEHAVIOR=legacy
+# - sonoran = default; native FiveM/pma-voice path (no CAD legacy bridge)
+# - legacy  = optional CAD websocket + mumble bridge path
+RADIO_BEHAVIOR=sonoran
+VOICE_BRIDGE_ENABLED=false
+# Set true only when using RADIO_BEHAVIOR=legacy and CAD voice bridge features.
 
-# Mumble voice bridge (dispatcher web voice)
-# MUMBLE_MANAGE=true  -> CAD spawns rust-mumble.exe automatically from server/murmur/
-# MUMBLE_HOST         -> localhost address the CAD bridge uses to talk to rust-mumble
-# MUMBLE_PORT         -> Mumble TCP+UDP port (must match voice_externalPort in voice.cfg)
-# MUMBLE_PUBLIC_IP    -> Your VPS public IP — written into voice.cfg for pma-voice clients.
-#                        If unset, voice_externalAddress in voice.cfg will not be correct.
+# Legacy Mumble bridge settings (optional; only for RADIO_BEHAVIOR=legacy)
+# MUMBLE_MANAGE=true  -> CAD may spawn rust-mumble.exe from server/murmur/
+# MUMBLE_HOST/MUMBLE_PORT -> host/port CAD bridge connects to
+# MUMBLE_PUBLIC_IP    -> optional public IP hint for legacy setups
 MUMBLE_HOST=127.0.0.1
 MUMBLE_PORT=64738
 MUMBLE_PUBLIC_IP=
@@ -84,9 +84,8 @@ MUMBLE_REJECT_UNAUTHORIZED=false
 MUMBLE_DISABLE_UDP=false
 MUMBLE_DISPATCHER_NAME_PREFIX=CAD_Dispatcher
 
-# FiveM server path (optional — for auto-deploying voice.cfg)
+# FiveM server path (optional; used for cad_bridge resource auto-sync only)
 # Set this to the folder that contains your FiveM server.cfg.
-# The CAD will write voice.cfg there automatically on startup and keep it in sync.
 # Example (Windows): FIVEM_SERVER_PATH=C:\FXServer\server-data
 # Example (Linux):   FIVEM_SERVER_PATH=/home/fivem/server-data
 FIVEM_SERVER_PATH=
