--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "dev:server": "npm run dev --workspace=server",
     "dev:web": "npm run dev --workspace=web",
     "build": "npm run build --workspace=web",
-    "start": "npm run start --workspace=server",
-    "postinstall": "node scripts/patch-mumble-node.js"
+    "start": "npm run start --workspace=server"
   },
   "devDependencies": {
     "concurrently": "^9.1.0"
