--- a/deploy/nginx/cad-site.windows.tls.conf.template
+++ b/deploy/nginx/cad-site.windows.tls.conf.template
@@ -12,7 +12,7 @@ server {
   }
 
   location / {
-    return 301 https://$host$request_uri;
+    return 301 https://{{DOMAIN}}$request_uri;
   }
 }
 
@@ -30,6 +30,11 @@ server {
   ssl_prefer_server_ciphers on;
 
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+  # Force canonical host so the app URL never sticks to raw VPS IP.
+  if ($host != "{{DOMAIN}}") {
+    return 301 https://{{DOMAIN}}$request_uri;
+  }
 
   location /voice-bridge {
     proxy_pass {{BACKEND}};
