--- a/deploy/nginx/cad.quokkanetworks.net.conf
+++ b/deploy/nginx/cad.quokkanetworks.net.conf
@@ -5,6 +5,11 @@ server {
 
   client_max_body_size 40m;
 
+  # Force canonical host so requests landing on raw VPS IP redirect to domain.
+  if ($host != "cad.quokkanetworks.net") {
+    return 301 https://cad.quokkanetworks.net$request_uri;
+  }
+
   location /voice-bridge {
     proxy_pass http://127.0.0.1:3031;
     proxy_http_version 1.1;
