--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,10 @@ AUTO_UPDATE_SELF_RESTART=true
 
 # Optional fallback for FiveM bridge auth token (Admin setting overrides this)
 # FIVEM_BRIDGE_SHARED_TOKEN=change-me-long-random-token
+# Optional max JSON body size accepted by CAD API (affects FiveM mugshot payloads)
+CAD_JSON_BODY_LIMIT=12mb
+# Optional mugshot character limit for /api/integration/fivem/licenses
+FIVEM_BRIDGE_MUGSHOT_MAX_CHARS=4000000
 
 # QBox MySQL (optional - can be configured via admin panel)
 QBOX_DB_HOST=127.0.0.1
