Changed key for ID

--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -53,6 +53,7 @@ cad_bridge_voice_participant_heartbeat_enabled=false
 cad_bridge_license_command=cadlicense
 cad_bridge_registration_command=cadrego
 cad_bridge_show_id_command=showid
+cad_bridge_show_id_key=PAGEDOWN
 cad_bridge_show_id_target_distance=4.0
 cad_bridge_show_id_nearby_distance=4.0
 cad_bridge_license_default_expiry_days=35
