--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -68,6 +68,7 @@ cad_bridge_license_default_classes=CAR
 # Pricing
 cad_bridge_document_fee_account=bank
 cad_bridge_document_fee_required=false
+cad_bridge_document_debug_logs=true
 # Optional JSON map overrides:
 # cad_bridge_license_fees_json={"6":1500,"14":3000,"35":7500,"70":14000}
 # cad_bridge_registration_fees_json={"6":2500,"14":5000,"35":12000,"70":22000}
