--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,10 @@ AUTO_UPDATE_SELF_RESTART=true
 CAD_JSON_BODY_LIMIT=12mb
 # Optional mugshot character limit for /api/integration/fivem/licenses
 FIVEM_BRIDGE_MUGSHOT_MAX_CHARS=4000000
+# Persist license bridge logs on the CAD node instance (JSON lines)
+FIVEM_BRIDGE_LICENSE_LOG_TO_FILE=true
+# Optional absolute/relative file path for license log output
+# FIVEM_BRIDGE_LICENSE_LOG_FILE=server/data/logs/fivem-license.log
 
 # QBox MySQL (optional - can be configured via admin panel)
 QBOX_DB_HOST=127.0.0.1
