More radio changes

--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -44,6 +44,7 @@ cad_bridge_radio_max_frequency=500
 cad_bridge_radio_overlay=default
 cad_bridge_radio_channel_sync_enabled=true
 cad_bridge_voice_participant_heartbeat_enabled=true
+cad_bridge_voice_event_poll_enabled=false
 
 # Optional advanced radio JSON overrides:
 # cad_bridge_radio_names_json={"1":"DISPATCH","2":"VICPOL"}
