More radio additions

--- a/.env.example
+++ b/.env.example
@@ -69,13 +69,14 @@ WEB_URL=http://localhost:3030
 # AUTH_COOKIE_SECURE=true
 
 # Radio behavior mode:
-# - sonoran = default; native FiveM/pma-voice path (no CAD legacy bridge)
+# - external = default; cad_bridge radio routing path for in-game players
 # - legacy  = optional CAD websocket + mumble bridge path
-RADIO_BEHAVIOR=sonoran
+RADIO_BEHAVIOR=external
 VOICE_BRIDGE_ENABLED=false
-# Set true only when using RADIO_BEHAVIOR=legacy and CAD voice bridge features.
+# Legacy-only switch. Set true only when RADIO_BEHAVIOR=legacy.
+# In external mode this flag is ignored (no CAD-managed Mumble bridge).
 
-# Legacy Mumble bridge settings (optional; only for RADIO_BEHAVIOR=legacy)
+# Mumble bridge settings (optional; used when VOICE_BRIDGE_ENABLED=true)
 # MUMBLE_MANAGE=true  -> CAD may spawn rust-mumble.exe from server/murmur/
 # MUMBLE_HOST/MUMBLE_PORT -> host/port CAD bridge connects to
 # MUMBLE_PUBLIC_IP    -> optional public IP hint for legacy setups
