--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -75,12 +75,13 @@ cad_bridge_document_debug_logs=true
 # cad_bridge_registration_fees_json={"6":2500,"14":5000,"35":12000,"70":22000}
 
 # Mugshot/photo provider
-cad_bridge_mugshot_provider=screenshot-basic
-cad_bridge_screenshot_resource=screenshot-basic
-cad_bridge_screenshot_encoding=jpg
-cad_bridge_screenshot_quality=0.7
-cad_bridge_screenshot_timeout_ms=5000
+cad_bridge_mugshot_provider=mugshotbase64
 cad_bridge_mugshot_resource=MugShotBase64
+# screenshot-basic fallback (disabled — resource removed)
+# cad_bridge_screenshot_resource=screenshot-basic
+# cad_bridge_screenshot_encoding=jpg
+# cad_bridge_screenshot_quality=0.7
+# cad_bridge_screenshot_timeout_ms=5000
 
 # Fine + job + jail processing
 cad_bridge_fine_adapter=auto
