radio additions and mugshot changes

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,8 @@ AUTO_UPDATE_SELF_RESTART=true
 CAD_JSON_BODY_LIMIT=12mb
 # Optional mugshot character limit for /api/integration/fivem/licenses
 FIVEM_BRIDGE_MUGSHOT_MAX_CHARS=4000000
+# Optional decoded mugshot byte limit after base64 parsing
+FIVEM_BRIDGE_MUGSHOT_MAX_BYTES=5000000
 # Persist license bridge logs on the CAD node instance (JSON lines)
 FIVEM_BRIDGE_LICENSE_LOG_TO_FILE=true
 # Optional absolute/relative file path for license log output
