More voice additions

--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,24 @@ VOICE_BRIDGE_ENABLED=false
 # Legacy-only switch. Set true only when RADIO_BEHAVIOR=legacy.
 # In external mode this flag is ignored (no CAD-managed Mumble bridge).
 
+# External voice transport tokens (Phase 2, no-Mumble path)
+# Provider options: none | livekit | jwt
+EXTERNAL_VOICE_PROVIDER=none
+
+# LiveKit provider settings
+EXTERNAL_VOICE_LIVEKIT_URL=
+EXTERNAL_VOICE_LIVEKIT_API_KEY=
+EXTERNAL_VOICE_LIVEKIT_API_SECRET=
+EXTERNAL_VOICE_LIVEKIT_ROOM_PREFIX=radio-
+EXTERNAL_VOICE_LIVEKIT_TOKEN_TTL_SECONDS=3600
+
+# Generic JWT provider settings (for custom external voice services)
+EXTERNAL_VOICE_JWT_SECRET=
+EXTERNAL_VOICE_JWT_ISSUER=cad-voice
+EXTERNAL_VOICE_JWT_AUDIENCE=external-radio
+EXTERNAL_VOICE_JWT_ROOM_PREFIX=radio-
+EXTERNAL_VOICE_JWT_TOKEN_TTL_SECONDS=3600
+
 # Mumble bridge settings (optional; used when VOICE_BRIDGE_ENABLED=true)
 # MUMBLE_MANAGE=true  -> CAD may spawn rust-mumble.exe from server/murmur/
 # MUMBLE_HOST/MUMBLE_PORT -> host/port CAD bridge connects to
