--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -45,6 +45,8 @@ cad_bridge_radio_overlay=default
 cad_bridge_radio_channel_sync_enabled=true
 cad_bridge_voice_participant_heartbeat_enabled=true
 cad_bridge_voice_event_poll_enabled=false
+# External mode only: set false when using legacy voice behavior.
+cad_bridge_external_voice_token_enabled=true
 
 # Optional advanced radio JSON overrides:
 # cad_bridge_radio_names_json={"1":"DISPATCH","2":"VICPOL"}
