Seitched to screencapture and fixed some errors

--- a/server/fivem-resource/server.cfg.example
+++ b/server/fivem-resource/server.cfg.example
@@ -36,5 +36,5 @@ setr voice_enableRadios 0
 # STEP 3: Ensure the resource starts
 # =============================================================================
 
-ensure screenshot-basic
+ensure screencapture
 ensure cad_bridge
