--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -52,7 +52,8 @@ cad_bridge_external_voice_token_enabled=true
 # cad_bridge_radio_names_json={"1":"DISPATCH","2":"VICPOL"}
 # cad_bridge_radio_restricted_channels_json={"2":{"type":"job","name":["police"],"requireDuty":true}}
 
-# License + registration commands/forms
+# License + registration (ped interaction)
+cad_bridge_enable_document_commands=false
 cad_bridge_license_command=cadlicense
 cad_bridge_registration_command=cadrego
 cad_bridge_show_id_command=showid
@@ -61,6 +62,21 @@ cad_bridge_show_id_target_distance=4.0
 cad_bridge_show_id_nearby_distance=4.0
 cad_bridge_license_default_expiry_days=35
 cad_bridge_registration_default_days=35
+cad_bridge_license_quiz_pass_percent=80
+cad_bridge_license_quiz_expiry_days=30
+cad_bridge_license_quiz_classes=CAR
+cad_bridge_document_ped_interaction_distance=2.2
+cad_bridge_document_ped_prompt_distance=12.0
+cad_bridge_license_ped_enabled=true
+cad_bridge_license_ped_model=s_m_m_dockwork_01
+cad_bridge_license_ped_coords=240.87,-1378.69,32.74,140.89
+cad_bridge_license_ped_scenario=WORLD_HUMAN_CLIPBOARD
+cad_bridge_license_ped_label=Press ~INPUT_CONTEXT~ to take the licence quiz
+cad_bridge_registration_ped_enabled=true
+cad_bridge_registration_ped_model=s_m_y_dealer_01
+cad_bridge_registration_ped_coords=-30.67,-1096.12,26.27,65.43
+cad_bridge_registration_ped_scenario=WORLD_HUMAN_CLIPBOARD
+cad_bridge_registration_ped_label=Press ~INPUT_CONTEXT~ to register your vehicle
 
 # Optional list overrides (comma-separated)
 cad_bridge_license_duration_options=6,14,35,70
