Fixed login time out

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@
 PORT=3030
 NODE_ENV=development
 JWT_SECRET=change-me-to-a-random-string
+# Auth token lifetime (JWT format, e.g. 12h, 7d, 30d)
+JWT_EXPIRES_IN=30d
 
 # Steam OpenID
 STEAM_API_KEY=your-steam-api-key
@@ -15,6 +17,8 @@ AUTH_COOKIE_SAMESITE=Lax
 AUTH_COOKIE_SECURE=false
 # Optional cookie domain (blank = current host)
 AUTH_COOKIE_DOMAIN=
+# Cookie lifetime in milliseconds (default 30 days)
+AUTH_COOKIE_MAX_AGE_MS=2592000000
 
 # Discord Bot
 DISCORD_BOT_TOKEN=your-discord-bot-token
