--- a/server/fivem-resource/config.cfg
+++ b/server/fivem-resource/config.cfg
@@ -37,6 +37,8 @@ cad_bridge_proximity_target_id=1
 cad_bridge_radio_rx_volume=0.35
 cad_bridge_radio_ptt_key=LMENU
 cad_bridge_radio_follow_native_ptt=true
+cad_bridge_radio_ptt_release_delay_ms=350
+cad_bridge_radio_talking_timeout_ms=6000
 cad_bridge_radio_forward_root=false
 cad_bridge_radio_ui_enabled=true
 cad_bridge_radio_ui_key=EQUALS
