Fix mugshot with helmets

--- a/.env.example
+++ b/.env.example
@@ -53,6 +53,8 @@ CAD_JSON_BODY_LIMIT=12mb
 FIVEM_BRIDGE_MUGSHOT_MAX_CHARS=4000000
 # Optional decoded mugshot byte limit after base64 parsing
 FIVEM_BRIDGE_MUGSHOT_MAX_BYTES=5000000
+# Optional: set true to chroma-key green-screen mugshots on the CAD API side
+FIVEM_BRIDGE_MUGSHOT_CHROMA_KEY_ENABLED=false
 # Persist license bridge logs on the CAD node instance (JSON lines)
 FIVEM_BRIDGE_LICENSE_LOG_TO_FILE=true
 # Optional absolute/relative file path for license log output
